[package]
name = "discrete_transforms"
version = "0.1.1"
authors = ["hgallagher1993 <hgallagher1993@gmail.com>"]
description = "Library for Discrete Transforms"
license = "MIT"
repository = "https://github.com/hgallagher1993/discrete_transforms"
homepage = "https://github.com/hgallagher1993/discrete_transforms"
readme = "README.md"

[dependencies]
num-traits = "0.2.6"
itertools = "0.8.0"